# gospeed_api

./: README.md  pyproject.toml
gopeed_api/: Response Validation in Model.md
gopeed_api/.obsidian/: workspace.json
src/gospeed_api/: api.py  index.py  index.pyi
src/gospeed_api/models/: __init__.py  continue_a_task.py  continue_a_task.pyi  continue_all_tasks.py  create_a_batch_of_tasks.py  create_a_task.py  create_a_task.pyi  delete_a_task.py  delete_tasks.py  delete_tasks.pyi  get_server_info.py  get_server_info.pyi  get_task_info.py  get_task_info.pyi  get_task_list.py  get_task_list.pyi  get_task_stats.py  pause_a_task.py  pause_all_tasks.py  pause_all_tasks.pyi  post_resolve_a_request.py  resolve_a_request.py  resolve_a_request.pyi
tests/: test_index.py
