[project]
name = "gospeed-api"
version = "2.1.3"
description = "Default template for PDM package"
authors = [
    {name = "tick97115115", email = "32931796+tick97115115@users.noreply.github.com"},
]
dependencies = [
    "pydantic>=2.8.2",
    "requests>=2.32.3",
    "httpx>=0.27.0",
    "trio>=0.26.0",
    "anyio>=4.4.0",
    "mypy>=1.15.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
test_sync = "pytest -k TestClassGospeedClientInstance -s"
test_async = "pytest -k TestClassAsyncGospeedClientInstance -s"
test_sync_delete_all = "pytest -k TestClassGospeedClientInstance_DeleteAllTasks -s"
test_async_delete_all = "pytest -k TestClassAsyncGospeedClientInstance_DeleteAllTasks -s"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
